<?xml version="1.0"?>
<package>
  <name>rosgo_build_tools</name>
  <version>0.0.0</version>
  <description>The rosgo_build_tools package</description>

  <maintainer email="akio7141@gmail.com">Aki Ochiai</maintainer>

  <license>Apache License 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
